--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ beautifulsoup4==4.12.2
 certifi==2023.5.7
 charset-normalizer==3.2.0
 Django==4.2
+django-admin-sortable2==2.2.3
 django-tinymce==3.6.1
 frozenlist==1.4.0
 idna==3.4
