--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-KEY=l~FkLoa91lgKpY~%KgWP@0wiq2}s%~kwEssdsvsdKr~dWsBOM8Ofdsaljfds1bct$YwLx}a
+KEY=l~FkLoa91lgKpY~%KgWP@0wiq2s%~kwEssdsvsdKr~dWsBOM8Ofdsaljfds1bc
 TG_KEY=7638955112:AAEF0mVnBJMhQRY9FyZyaZ70DEtGLkXK_uI
 CHAT_ID=-4521912686
 ADMIN_ID=6372144179
