Добавлен редактор стиля в админку в поле текста новостей. В шаблоне разводящей страницу фильтр с save (убирает экранирование) заменен на striptags (удаляет теги хранимые в тексте). В Poetry добавлена библиотека ckeditor. Создана миграция. В .gitignore добавлено содержимое staticfiles

--- a/.gitignore
+++ b/.gitignore
@@ -195,4 +195,6 @@ app/media/partners/*
 app/media/practice_instance_images/*
 !app/media/practice_instance_images/.gitkeep
 
+app/staticfiles/*
+
 */db_dump.json
