--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "sorl-thumbnail (>=12.11.0,<13.0.0)",
     "transliterate (>=1.10.2,<2.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
+    "django-ckeditor (>=6.7.2,<7.0.0)",
 ]
 
 [tool.poetry]
