Добавлены модели Service, ServiceCategory и ServiceBlock для управления услугами. Зарегистрированы в админке. Для ServiceBlock реализована drag-and-drop сортировка. Добавлены вью и маршруты для отображения списка и детальной страницы услуги. Добавлены шаблоны service_list и service_detail. Добавлены инклюды для рендеринга блоков в зависимости от их типа. Создана инструкция для фронтендера. Добавлена инстукция для фронта

--- a/.gitignore
+++ b/.gitignore
@@ -195,6 +195,9 @@ app/media/partners/*
 app/media/practice_instance_images/*
 !app/media/practice_instance_images/.gitkeep
 
+app/media/services/*
+!app/media/services/.gitkeep
+
 app/staticfiles/*
 
 */db_dump.json
