Добавлена модель клиента. Модель зарегистрирована в админке. Добавлен вью-класс для вывода клиентов. Вью зарегистрирован в urls.py. Добавлен шаблон страницы клиентов. Добавлена ссылка на страницу в главное меню. Добавлена миграция. Актуализирован .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -197,6 +197,13 @@ app/media/practice_instance_images/*
 
 app/media/services/*
 !app/media/services/.gitkeep
+!app/media/services/blocks
+app/media/services/blocks/*
+!app/media/services/blocks/.gitkeep
+!app/media/serves/blocks/.gitkeep
+
+app/media/clients/*
+!app/media/clients/.gitkeep
 
 app/staticfiles/*
 
