Добавлены модели для статей и видео в раздел "Пресс-центр". Добавлены миграции. Реализованы шаблоны списка статей и видео. Добавлена детальная страница статьи. Реализован просмотр видео через всплывающее модальное окно. Поддерживаются ссылки на YouTube и RuTube. Добавлена логика автозаполнения превью: если не указано вручную — используется превью с видеохостинга. Добавлено отображение превью в админке. Добавлены url-маршруты, вьюхи, зарегистрированы модели в админке. Добавлены ссылки на новые разделы в меню и футере. Актуализирован .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -205,6 +205,9 @@ app/media/services/blocks/*
 app/media/clients/*
 !app/media/clients/.gitkeep
 
+app/media/videos/*
+!app/media/videos/.gitkeep
+
 app/staticfiles/*
 
 */db_dump.json
