--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "transliterate (>=1.10.2,<2.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
     "django-ckeditor (>=6.7.2,<7.0.0)",
+    "pytest (>=8.3.5,<9.0.0)",
+    "pytest-django (>=4.11.1,<5.0.0)",
 ]
 
 [tool.poetry]
